// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListingCard loads a saved listing and looks right 1`] = `
<div>
  <article
    class="listing-card"
  >
    <div
      class="listing-photo"
      style="background-image: url("https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=900&q=82");"
    >
      <span
        class="status-badge active"
      >
        <i />
        active
      </span>
      <button
        aria-label="Unsave listing"
        class="save saved"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart"
          fill="currentColor"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
      <span
        class="source-badge"
      >
        sample feed
      </span>
    </div>
    <div
      class="card-body"
    >
      <div
        class="price-line"
      >
        <strong>
          $525,000
        </strong>
        <span>
          292
           
          <small>
            / sqft
          </small>
        </span>
      </div>
      <h3>
        42 Maple Street
      </h3>
      <p
        class="location"
      >
        Arlington
        , 
        VA
         
        22201
      </p>
      <div
        class="specs"
      >
        <span>
          <b>
            3
          </b>
           beds
        </span>
        <i />
        <span>
          <b>
            2
          </b>
           baths
        </span>
        <i />
        <span>
          <b>
            1,800
          </b>
           sqft
        </span>
      </div>
      <p
        class="description"
      >
        Bright home near parks
      </p>
      <div
        class="card-foot"
      >
        <span>
          Listed
           
          Sep 20
        </span>
        <span
          class="listing-id"
        >
          ID 
          listing-1
        </span>
      </div>
    </div>
  </article>
</div>
`;

exports[`ListingCard loads an unsaved listing and looks right 1`] = `
<div>
  <article
    class="listing-card"
  >
    <div
      class="listing-photo"
      style="background-image: url("https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=900&q=82");"
    >
      <span
        class="status-badge active"
      >
        <i />
        active
      </span>
      <button
        aria-label="Save listing"
        class="save"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
      <span
        class="source-badge"
      >
        sample feed
      </span>
    </div>
    <div
      class="card-body"
    >
      <div
        class="price-line"
      >
        <strong>
          $525,000
        </strong>
        <span>
          292
           
          <small>
            / sqft
          </small>
        </span>
      </div>
      <h3>
        42 Maple Street
      </h3>
      <p
        class="location"
      >
        Arlington
        , 
        VA
         
        22201
      </p>
      <div
        class="specs"
      >
        <span>
          <b>
            3
          </b>
           beds
        </span>
        <i />
        <span>
          <b>
            2
          </b>
           baths
        </span>
        <i />
        <span>
          <b>
            1,800
          </b>
           sqft
        </span>
      </div>
      <p
        class="description"
      >
        Bright home near parks
      </p>
      <div
        class="card-foot"
      >
        <span>
          Listed
           
          Sep 20
        </span>
        <span
          class="listing-id"
        >
          ID 
          listing-1
        </span>
      </div>
    </div>
  </article>
</div>
`;
